[package]
name = "copy-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
anstream = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
glob = "0.3"
arboard = { version = "3.3", optional = true }

[[bin]]
name = "ccp"
path = "src/main.rs"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
