[package]
name = "ccp_tree"
version = "0.1.3"
edition = "2021"
description = "ccp: 📄 Snapshot, 📋 blueprint, 🏗️ scaffold. Instantly capture project structure & files to Markdown/.tree, then regenerate anywhere."
license = "MIT"
repository = "https://github.com/AradPilevarJavid/ccp"
homepage = "https://github.com/AradPilevarJavid/ccp"
documentation = "https://docs.rs/ccp"
readme = "README.md"
keywords = ["snapshot", "blueprint", "scaffold", "markdown", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Arad Pilevar Javid"]

[dependencies]
anyhow = "1.0"
anstream = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
glob = "0.3"
arboard = { version = "3.3", optional = true }

[[bin]]
name = "ccp"
path = "src/main.rs"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
